@@ -5,7 +5,7 @@ import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 import org.testng.Assert;
-import testBaseSetup.utils.LoggerUtil;
+import testBase.utils.LoggerUtil;
 
 import java.util.List;
 import java.util.Map;
@@ -47,8 +47,8 @@ public class CartPage extends BasePage {
 
     public void verifyAddedProductInCart(List<Map<String, String>> cartData){
         LoggerUtil.info("This is from add to cart-->"+ productNameFld.getText());
-        Assert.assertEquals(cartData.getFirst().get("Product"),productNameFld.getText());
-        Assert.assertEquals(cartData.getFirst().get("Quantity"),productQuantityFld.getDomProperty("value"));
+        Assert.assertEquals(cartData.get(0).get("Product"),productNameFld.getText());
+        Assert.assertEquals(cartData.get(0).get("Quantity"),productQuantityFld.getDomProperty("value"));
     }
 
 
