@@ -23,8 +23,8 @@ public class OrderPage extends BasePage {
     public void verifyTheOrderDetailsPage(List<Map<String,String>> data){
         waitUntilPageGetsFullyLoaded();
         System.out.println("This is from orders page-->"+ productName.getText());
-        Assert.assertEquals(productName.getText(),data.getFirst().get("productName"));
-        Assert.assertEquals(subtotal.getText(),data.getFirst().get("subtotal"));
-        Assert.assertEquals(paymentMethod.getText(),data.getFirst().get("paymentMethod"));
+        Assert.assertEquals(productName.getText(),data.get(0).get("productName"));
+        Assert.assertEquals(subtotal.getText(),data.get(0).get("subtotal"));
+        Assert.assertEquals(paymentMethod.getText(),data.get(0).get("paymentMethod"));
     }
 }
